--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "module": "dist/contextmenu.esm.js",
   "browser": "dist/contextmenu.js",
   "style": "dist/contextmenu.css",
-  "version": "0.1.1",
-  "scripts": {
+  "version": "0.1.1", "scripts": {
     "prettier": "prettier --write **/*.{js,ts,css}",
     "lint-code": "eslint --fix **/*.{js,ts}",
     "lint-style": "stylelint --fix **/*.css",
