--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "module": "dist/contextmenu.esm.js",
   "browser": "dist/contextmenu.js",
   "style": "dist/contextmenu.css",
-  "version": "0.1.17",
+  "version": "0.1.18",
   "scripts": {
     "prettier": "prettier --write **/*.{js,ts,css}",
     "lint-code": "eslint --fix **/*.{js,ts}",
@@ -33,7 +33,7 @@
     "react",
     "browser"
   ],
-  "license": "LGPL-3.0",
+  "license": "MIT",
   "author": {
     "name": "Mr.Fan",
     "email": "zlhc@live.com"
