--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "module": "dist/contextmenu.esm.js",
   "browser": "dist/contextmenu.js",
   "style": "dist/contextmenu.css",
-  "version": "0.1.20",
+  "version": "0.1.21",
   "scripts": {
     "prettier": "prettier --write **/*.{js,ts,css}",
     "lint-code": "eslint --fix **/*.{js,ts}",
@@ -61,6 +61,7 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "cross-env": "^7.0.2",
+    "cross-spawn": "^7.0.3",
     "cssnano": "^4.1.10",
     "eslint": "^7.6.0",
     "husky": "^4.2.5",
