--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "module": "dist/contextmenu.esm.js",
   "browser": "dist/contextmenu.js",
   "style": "dist/contextmenu.css",
-  "version": "0.1.21",
+  "version": "0.1.22",
   "scripts": {
     "prettier": "prettier --write **/*.{js,ts,css}",
     "lint-code": "eslint --fix **/*.{js,ts}",
@@ -38,9 +38,7 @@
     "name": "Mr.Fan",
     "email": "zlhc@live.com"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "homepage": "https://github.com/HtmlOS/contextmenu",
   "repository": {
     "type": "git",
@@ -50,12 +48,12 @@
     "url": "https://github.com/HtmlOS/contextmenu/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "@babel/preset-flow": "^7.10.4",
-    "@types/node": "^14.0.27",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
+    "@types/node": "^14.6.4",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "babel-core": "^6.26.3",
     "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-external-helpers": "^6.22.0",
@@ -63,58 +61,51 @@
     "cross-env": "^7.0.2",
     "cross-spawn": "^7.0.3",
     "cssnano": "^4.1.10",
-    "eslint": "^7.6.0",
+    "eslint": "^7.8.1",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
+    "lint-staged": "^10.3.0",
     "livereload": "^0.9.1",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.3",
     "postcss-preset-env": "^6.7.0",
     "postcss-simple-vars": "^5.0.2",
     "postcss-url": "^8.0.0",
-    "prettier": "^2.0.5",
-    "rollup": "^2.23.0",
+    "prettier": "^2.1.1",
+    "rollup": "^2.26.10",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-filesize": "^9.0.2",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-livereload": "^1.3.0",
+    "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-multi-entry": "^2.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.3",
-    "rollup-plugin-postcss": "^3.1.4",
+    "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-serve": "^1.0.3",
+    "rollup-plugin-serve": "^1.0.4",
     "rollup-plugin-sourcemaps": "^0.6.2",
-    "rollup-plugin-terser": "^6.1.0",
-    "rollup-plugin-typescript2": "^0.27.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.27.2",
     "rollup-plugin-uglify": "^6.0.4",
     "rollup-watch": "^4.3.1",
     "style-loader": "^1.2.1",
-    "stylelint": "^13.6.1",
+    "stylelint": "^13.7.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
-    "ts-loader": "^8.0.2",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "ts-loader": "^8.0.3",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
   },
   "dependencies": {},
   "engines": {
     "node": ">=8.0.0"
   },
   "lint-staged": {
-    "*": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.{js,ts}": [
-      "eslint --fix"
-    ],
-    "*.{css}": [
-      "stylelint --fix"
-    ]
+    "*": ["prettier --write", "git add"],
+    "*.{js,ts}": ["eslint --fix"],
+    "*.{css}": ["stylelint --fix"]
   },
   "husky": {
     "hooks": {
