--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "module": "dist/contextmenu.esm.js",
   "browser": "dist/contextmenu.js",
   "style": "dist/contextmenu.css",
-  "version": "0.1.22",
+  "version": "0.1.23",
   "scripts": {
     "prettier": "prettier --write **/*.{js,ts,css}",
     "lint-code": "eslint --fix **/*.{js,ts}",
     "lint-style": "stylelint --fix **/*.css",
+    "ncu": "npm install -g npm-check-updates && ncu -u",
     "serve": "rollup -c -w",
     "build": "tsc && cross-env NODE_ENV=production rollup -c",
     "deploy": "npm run build && npm publish --access=public",
@@ -38,7 +39,9 @@
     "name": "Mr.Fan",
     "email": "zlhc@live.com"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "homepage": "https://github.com/HtmlOS/contextmenu",
   "repository": {
     "type": "git",
@@ -48,64 +51,75 @@
     "url": "https://github.com/HtmlOS/contextmenu/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-flow": "^7.10.4",
-    "@types/node": "^14.6.4",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-flow": "^7.13.13",
+    "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "babel-core": "^6.26.3",
-    "babel-plugin-add-module-exports": "^1.0.2",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
-    "cross-env": "^7.0.2",
+    "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.3",
-    "cssnano": "^4.1.10",
-    "eslint": "^7.8.1",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.3.0",
-    "livereload": "^0.9.1",
-    "postcss-import": "^12.0.1",
-    "postcss-nested": "^4.2.3",
+    "cssnano": "^5.0.0",
+    "eslint": "^7.24.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
+    "livereload": "^0.9.3",
+    "postcss": "^8.2.10",
+    "postcss-import": "^14.0.1",
+    "postcss-nested": "^5.0.5",
     "postcss-preset-env": "^6.7.0",
-    "postcss-simple-vars": "^5.0.2",
-    "postcss-url": "^8.0.0",
-    "prettier": "^2.1.1",
-    "rollup": "^2.26.10",
+    "postcss-simple-vars": "^6.0.3",
+    "postcss-url": "^10.1.3",
+    "prettier": "^2.2.1",
+    "rollup": "^2.45.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-filesize": "^9.0.2",
+    "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-multi-entry": "^2.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.3",
-    "rollup-plugin-postcss": "^3.1.8",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-serve": "^1.0.4",
-    "rollup-plugin-sourcemaps": "^0.6.2",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.27.2",
+    "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-uglify": "^6.0.4",
     "rollup-watch": "^4.3.1",
-    "style-loader": "^1.2.1",
-    "stylelint": "^13.7.0",
-    "stylelint-config-recommended": "^3.0.0",
-    "stylelint-config-standard": "^20.0.0",
+    "style-loader": "^2.0.0",
+    "stylelint": "^13.12.0",
+    "stylelint-config-recommended": "^4.0.0",
+    "stylelint-config-standard": "^21.0.0",
     "stylelint-order": "^4.1.0",
-    "ts-loader": "^8.0.3",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
+    "ts-loader": "^8.1.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   },
-  "dependencies": {},
+  "dependencies": {
+    "global": "^4.4.0",
+    "npm-check-updates": "^11.4.1"
+  },
   "engines": {
     "node": ">=8.0.0"
   },
   "lint-staged": {
-    "*": ["prettier --write", "git add"],
-    "*.{js,ts}": ["eslint --fix"],
-    "*.{css}": ["stylelint --fix"]
+    "*": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.{js,ts}": [
+      "eslint --fix"
+    ],
+    "*.{css}": [
+      "stylelint --fix"
+    ]
   },
   "husky": {
     "hooks": {
